# wiki-truth

./: .env.example  README.md  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js
contract/: wiki_truth.py
contract/tests/: README.md
contract/tests/direct/: test_wiki_truth.py
src/components/: ResultCard.tsx  VerificationForm.tsx  VerificationStatus.tsx  WalletPanel.tsx
src/hooks/: useWallet.ts  useWikiTruth.ts
src/lib/: constants.ts  genlayerClient.ts  wikiInput.ts  wikipedia.ts
src/pages/: HomePage.tsx
src/styles/: globals.css
